# src/swagger_output.json
@@ -125,6 +125,54 @@
           }
         }
       }
+    },
+    "/api/v1/dev/npm-downloads/{name}/{period}": {
+      "get": {
+        "description": "Query the numbers of total markets",
+        "parameters": [
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "period",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/api/v1/dev/github-metrics/{organization}/{name}": {
+      "get": {
+        "description": "Query the numbers of total markets",
+        "parameters": [
+          {
+            "name": "organization",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
     }
   }
 }
